Fix gradle module metadatas not including api deps in runtimeElements